# libchewing

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
data/: Makefile.am
include/internal/: chewing-sql.h  hash-private.h  userphrase-private.h
src/: Makefile.am  chewingio.c
src/common/: Makefile.am
src/porting_layer/: Makefile.am
src/porting_layer/src/: Makefile.am
src/tools/: Makefile.am
test/: Makefile.am
