include $(top_srcdir)/src/porting_layer/src

noinst_HEADERS = \
	$(topsrc_dir)/src/porting_layer/include/plat_mmap.h \
	$(topsrc_dir)/src/porting_layer/include/plat_types.h \
	$(topsrc_dir)/src/porting_layer/include/plat_path.h \
	$(topsrc_dir)/src/porting_layer/include/sys/plat_posix.h \
	$(topsrc_dir)/src/porting_layer/include/sys/plat_windows.h \
	$(NULL)
